--- a/views/verify/partials/list-workers.ejs
+++ b/views/verify/partials/list-workers.ejs
@@ -13,7 +13,7 @@
 		</div>
 		<datalist id="worker">
 			<% for(let i = 0; i < worker.length; i++) {%>
-				<option data-value="<%=worker[i].login%>" value="<%=(worker[i].name + ', ' + worker[i].role)%>"></option>
+				<option data-value="<%=worker[i].login%>" value="<%=(worker[i].name + ', ' + worker[i].position)%>"></option>
 			<%} %>
 		</datalist>
 	</div>
