--- a/views/table-pages/page-table-users.ejs
+++ b/views/table-pages/page-table-users.ejs
@@ -20,23 +20,29 @@
 				<table class="table border-color-f">
 					<thead>
 						<tr>
-							<th scope="col"><h4>ФИО</h4></th>
-							<th scope="col"><h4>Логин</h4></th>
-							<th scope="col"><h4>Роль</h4></th>
-							<th scope="col"><h4>Должность</h4></th>
-							<th scope="col"><h4>Факультет</h4></th>
-							<th scope="col"><h4>Кафедра</h4></th>
+							<th class="text-center" scope="col">ФИО</th>
+							<th class="text-center" scope="col">Логин</th>
+							<th class="text-center" scope="col">Роль</th>
+							<th class="text-center" scope="col">Должность</th>
+							<th class="text-center" scope="col">Факультет</th>
+							<th class="text-center" scope="col">Кафедра</th>
+							<% if(infoUser.rights.indexOf("delete_user") !== -1) {%>
+								<th class="text-center" scope="col">Действия</th>
+							<%}%>
 						</tr>
 					</thead>
 					<tbody>
 						<% for(let i = 0; i < users.length; i ++) {%>
 							<tr class="table-data">
-								<th scope="row"><%=users[i].name %></th>
-								<td><%=users[i].login %></td>
-								<td><%=users[i].role %></td>
-								<td><%=users[i].position %></td>
-								<td><%=users[i].faculty %></td>
-								<td><%=users[i].department %></td>
+								<th class="text-center" scope="row"><%=users[i].name %></th>
+								<td class="text-center"><%=users[i].login %></td>
+								<td class="text-center"><%=users[i].role %></td>
+								<td class="text-center"><%=users[i].position %></td>
+								<td class="text-center"><%=users[i].faculty %></td>
+								<td class="text-center"><%=users[i].department %></td>
+								<% if(infoUser.rights.indexOf("delete_user") !== -1) {%>
+									<td class="text-center align-middle"><a href="#" class="delete-user" data-login="<%=users[i].login%>"><img src="/img/icons/trash.svg" alt="удалить" title="удалить" width="28px"></a></td>
+								<%}%>
 							</tr>
 						<%} %>
 					</tbody>
@@ -47,10 +53,13 @@
 		<div class="footer">
 			<%- include("../common/footer.ejs") %>
 		</div>
+		<%- include("../common/modal.ejs") %>
+		<%- include("../common/modal-confirm.ejs") %>
 	</div>
 
 	<%- include("../common/scripts.ejs")%>
 	<script type="text/javascript" src="/scripts/filter-table-by-th.js"></script>
+	<script type="text/javascript" src="/scripts/change-users/actions.js"></script>
 
 </body>
 </html>
